fix: tree overflow-x styles

--- a/src/components/FileTree/FileTree.module.css
+++ b/src/components/FileTree/FileTree.module.css
@@ -37,3 +37,8 @@
 .navigable {
   cursor: pointer;
 }
+
+.tree {
+  max-width: 100%;
+  width: 100%;
+}
