--- a/src/components/Tree/Tree.module.css
+++ b/src/components/Tree/Tree.module.css
@@ -4,7 +4,6 @@
   overflow-x: auto;
   overflow-y: auto;
   font-size: 12px;
-  min-width: max-content;
 }
 
 .row {
